--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -62,3 +62,11 @@
     <% end %>
   </div>
 </div>
+<div class="flex justify-center">
+  <button class="btn btn btn-primary text-white mb-12">
+    <%= link_to :back do %>
+      <i class="fa-solid fa-chevron-left mr-1"></i>
+      <%= t('.back_before_page') %>
+    <% end %>
+  </button>
+</div>
