Fix:Twitterシェアからの遷移などで、直前のページが投稿一覧ではない時、投稿一覧ページに遷移するようにする

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -62,11 +62,20 @@
     <% end %>
   </div>
 </div>
-<div class="flex justify-center">
-  <button class="btn btn btn-primary text-white mb-12">
-    <%= link_to :back do %>
+<% if request.referer&.include?('/posts') %>
+  <div class="flex justify-center">
+    <button class="btn btn btn-primary text-white mb-12">
+      <%= link_to :back do %>
+        <i class="fa-solid fa-chevron-left mr-1"></i>
+        <%= t('.back_before_page') %>
+      <% end %>
+    </button>
+  </div>
+<% else %>
+  <div class="flex justify-center">
+    <button class="btn btn btn-primary text-white mb-12">
       <i class="fa-solid fa-chevron-left mr-1"></i>
-      <%= t('.back_before_page') %>
-    <% end %>
-  </button>
-</div>
+      <%= link_to t('.back_before_page'), posts_path %>
+    </button>
+  </div>
+<% end %>
