--- a/app/views/okogoto_images/new.html.erb
+++ b/app/views/okogoto_images/new.html.erb
@@ -1,14 +1,14 @@
 <% set_meta_tags( title: 'オコゴト画像作成' ) %>
 <div class="bg-white py-6 sm:py-8 lg:py-12">
   <div class="mx-auto max-w-screen-2xl px-4 md:px-8 flex justify-center">
-    <div class="card w-96 bg-base-100 shadow-xl mb-10">
+    <div class="card w-96 bg-base-100 shadow-xl mb-10 outline-dashed outline-gray-200">
       <div class="card-body">
-        <h1 class="card-title justify-center text-secondary"><%= t('.title') %></h1>
+        <h1 class="card-title justify-center text-secondary underline decoration-secondary decoration-dashed underline-offset-8 mb-3"><%= t('.title') %></h1>
         <%= form_with url: okogoto_images_path, local: true, class: 'flex-col' do |f| %>
           <%= render 'shared/error_messages', object: @okogoto_image %>
           <div class="form-control mb-4">
             <%= f.label t('.okogoto'), class: 'label text-secondary' %>
-            <%= f.text_area :okogoto, class: 'textarea textarea-primary bg-primary text-white placeholder-white', placeholder: '70文字以内で入力してください（ 70文字以上入力されません ）', maxlength: '70' %>
+            <%= f.text_area :okogoto, class: 'textarea textarea-primary border border-dashed text-primary placeholder-primary', placeholder: '70文字以内で入力してください（ 70文字以上入力されません ）', maxlength: '70' %>
           </div>
           <div class="form-control space-x-2 space-y-2">
             <%= f.label t('.image'), class: 'text-secondary' %>
@@ -37,7 +37,7 @@
               <%= image_tag 'okogoto_friends.png', size: '320x200' %>
             </div> 
           </div>
-          <div class="card-actions justify-center mt-3">
+          <div class="card-actions justify-center mt-6">
             <%= f.submit t('.submit'), class: 'btn btn-primary text-white rounded-full' %>
           </div>
         <% end %>
