--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -2,7 +2,7 @@
 <section class="text-gray-600 body-font">
   <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-col text-center w-full mb-6">
-      <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-secondary"><%= t('.title') %></h1>
+      <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-secondary underline decoration-secondary decoration-dashed underline-offset-8"><%= t('.title') %></h1>
     </div>
     <div class="flex md:w-1/3 w-full sm:flex-row flex-col mx-auto px-8 sm:space-x-4 sm:space-y-0 space-y-4 sm:px-0 py-2 items-end">
       <div class="relative flex-grow w-full">
