--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,21 +1,23 @@
 <% set_meta_tags( title: 'ユーザー登録' ) %>
 <div class="flex justify-center">
-  <div class="card w-96 my-10 bg-base-100 shadow-xl">
+  <div class="card w-96 my-10 bg-base-info shadow-xl outline-dashed outline-gray-300">
     <div class="card-body">
-      <h1 class="card-title justify-center text-secondary"><%= t('.title') %></h1>
+      <h1 class="card-title justify-center text-secondary text-2xl underline decoration-dashed underline-offset-8 mb-4">
+        <%= t('.title') %>
+      </h1>
       <%= form_with model: @user, local: true, class: 'flex-col' do |f| %>
         <%= render 'shared/error_messages', object: @user %>
         <div class="form-control">
           <%= f.label :email, class: 'label text-secondary' %>
-          <%= f.email_field :email, class: 'input input-primary bg-primary placeholder-white text-white input-bordered w-full max-w-xs', placeholder: 'email' %>
+          <%= f.email_field :email, class: 'input input-primary border-dashed placeholder-primary text-primary w-full max-w-xs', placeholder: 'okogoto@example.com' %>
         </div>
         <div class="form-control">
           <%= f.label :name, class: 'label text-secondary' %>
-          <%= f.text_field :name, class: 'input input-primary bg-primary placeholder-white text-white input-bordered w-full max-w-xs', placeholder: 'nickname' %>
+          <%= f.text_field :name, class: 'input input-primary border-dashed placeholder-primary text-primary w-full max-w-xs', placeholder: 'NAME' %>
         </div>
         <div class="form-control">
           <%= f.label :age, class: 'label text-secondary' %>
-          <%= f.select :age, User.ages_i18n.invert.to_a, {}, class: 'select select-primary bg-primary text-white select-bordered select-sm w-full max-w-xs mb-2' %>
+          <%= f.select :age, User.ages_i18n.invert.to_a, {}, class: 'select select-primary border-dashed text-primary select-bordered select-sm w-full max-w-xs mb-2' %>
         </div>
         <div class="form-control space-x-2 space-y-2">
           <%= f.label :gender, class: 'label text-secondary' %>
@@ -34,17 +36,17 @@
         </div>
         <div class="form-control">
           <%= f.label :password, class: 'label text-secondary' %>
-          <%= f.password_field :password, class: 'input input-primary bg-primary placeholder-white text-white input-bordered w-full max-w-xs', placeholder: 'password' %>
+          <%= f.password_field :password, class: 'input input-primary border-dashed placeholder-primary text-primary w-full max-w-xs', placeholder: '6文字以上で入力してください' %>
         </div>
         <div class="form-control">
           <%= f.label :password_confirmation, class: 'label text-secondary' %>
-          <%= f.password_field :password_confirmation, class: 'input input-primary bg-primary placeholder-white text-white input-bordered w-full max-w-xs', placeholder: 'password confirmation' %>
+          <%= f.password_field :password_confirmation, class: 'input input-primary border-dashed placeholder-primary text-primary w-full max-w-xs', placeholder: '確認のためもう一度入力してください' %>
         </div>
         <div class="card-actions justify-center mt-6">
           <%= f.submit t('.submit'), class: 'btn btn-secondary text-white rounded-full' %>
         </div>
       <% end %>
-      <%= link_to t('.to_login_page'), login_path, class: 'link link-secondary flex justify-center mt-2' %>
+      <%= link_to t('.to_login_page'), login_path, class: 'link link-primary flex justify-center mt-2' %>
     </div>
   </div>
 </div>
